--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif8266
 monitor_speed = 74880
 board = esp12e
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+    https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
